{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 83,
  "lineage": "b228309e-082a-706d-193f-d9b1d78b474c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672718425217:internet-gateway/igw-08711cab28e1f413e",
            "id": "igw-08711cab28e1f413e",
            "owner_id": "672718425217",
            "region": "us-east-1",
            "tags": {
              "Name": "dashboard-counting-igw"
            },
            "tags_all": {
              "Name": "dashboard-counting-igw"
            },
            "vpc_id": "vpc-0aad44faeb7dfccb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "igw-08711cab28e1f413e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "counting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:672718425217:loadbalancer/app/counting-alb/b2d5a5bc8b223770",
            "arn_suffix": "app/counting-alb/b2d5a5bc8b223770",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-counting-alb-662250130.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:672718425217:loadbalancer/app/counting-alb/b2d5a5bc8b223770",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "counting-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-00e92364e3b59c4e1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00447f6e50b49fa8b"
              },
              {
                "subnet_id": "subnet-0082300c48f01c16a"
              }
            ],
            "subnets": [
              "subnet-00447f6e50b49fa8b",
              "subnet-0082300c48f01c16a"
            ],
            "tags": {
              "Name": "counting-alb"
            },
            "tags_all": {
              "Name": "counting-alb"
            },
            "vpc_id": "vpc-0aad44faeb7dfccb1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:672718425217:loadbalancer/app/counting-alb/b2d5a5bc8b223770"
          },
          "dependencies": [
            "aws_security_group.counting_alb",
            "aws_subnet.counting_private_subnet1",
            "aws_subnet.counting_private_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "counting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:672718425217:listener/app/counting-alb/b2d5a5bc8b223770/3a46804001a3330b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:672718425217:targetgroup/counting-tg/ce59c5e1653d7159",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:672718425217:listener/app/counting-alb/b2d5a5bc8b223770/3a46804001a3330b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:672718425217:loadbalancer/app/counting-alb/b2d5a5bc8b223770",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:672718425217:listener/app/counting-alb/b2d5a5bc8b223770/3a46804001a3330b"
          },
          "dependencies": [
            "aws_lb.counting",
            "aws_lb_target_group.counting",
            "aws_security_group.counting_alb",
            "aws_subnet.counting_private_subnet1",
            "aws_subnet.counting_private_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "counting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:672718425217:targetgroup/counting-tg/ce59c5e1653d7159",
            "arn_suffix": "targetgroup/counting-tg/ce59c5e1653d7159",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:672718425217:targetgroup/counting-tg/ce59c5e1653d7159",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "counting-tg",
            "port": 9002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "counting-tg"
            },
            "tags_all": {
              "Name": "counting-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0aad44faeb7dfccb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:672718425217:targetgroup/counting-tg/ce59c5e1653d7159"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:672718425217:targetgroup/dashboard-tg/d2249cd283051cd2",
            "arn_suffix": "targetgroup/dashboard-tg/d2249cd283051cd2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:672718425217:targetgroup/dashboard-tg/d2249cd283051cd2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dashboard-tg",
            "port": 9001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dashboard-tg"
            },
            "tags_all": {
              "Name": "dashboard-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0aad44faeb7dfccb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:672718425217:targetgroup/dashboard-tg/d2249cd283051cd2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:route-table/rtb-0f4a479058d9e395c",
            "id": "rtb-0f4a479058d9e395c",
            "owner_id": "672718425217",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "-private-route-table"
            },
            "tags_all": {
              "Name": "-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aad44faeb7dfccb1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "rtb-0f4a479058d9e395c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "counting_private_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08003aea7b3ca032c",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0f4a479058d9e395c",
            "subnet_id": "subnet-0082300c48f01c16a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "rtbassoc-08003aea7b3ca032c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.counting_private_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "counting_private_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d662af4d40dea200",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0f4a479058d9e395c",
            "subnet_id": "subnet-00447f6e50b49fa8b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "rtbassoc-0d662af4d40dea200",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.counting_private_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dashboard_private_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069dd9701f9a32827",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0f4a479058d9e395c",
            "subnet_id": "subnet-0cc9a2f19e7a9269f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "rtbassoc-069dd9701f9a32827",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.dashboard_private_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dashboard_private_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f86394fb48f6d332",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0f4a479058d9e395c",
            "subnet_id": "subnet-0c4c33e73d90a2431"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "rtbassoc-0f86394fb48f6d332",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.dashboard_private_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "counting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:security-group/sg-0da8783c0aa6ee3fb",
            "description": "Security group for Counting EC2",
            "egress": [],
            "id": "sg-0da8783c0aa6ee3fb",
            "ingress": [],
            "name": "counting-sg",
            "name_prefix": "",
            "owner_id": "672718425217",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "counting-sg"
            },
            "tags_all": {
              "Name": "counting-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aad44faeb7dfccb1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "sg-0da8783c0aa6ee3fb",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "counting_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:security-group/sg-00e92364e3b59c4e1",
            "description": "Security group for Counting ALB",
            "egress": [],
            "id": "sg-00e92364e3b59c4e1",
            "ingress": [],
            "name": "counting-alb-sg",
            "name_prefix": "",
            "owner_id": "672718425217",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "counting-alb-sg"
            },
            "tags_all": {
              "Name": "counting-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aad44faeb7dfccb1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "sg-00e92364e3b59c4e1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:security-group/sg-0b2160a8ba111bf24",
            "description": "Security group for Dashboard EC2",
            "egress": [],
            "id": "sg-0b2160a8ba111bf24",
            "ingress": [],
            "name": "dashboard-sg",
            "name_prefix": "",
            "owner_id": "672718425217",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dashboard-sg"
            },
            "tags_all": {
              "Name": "dashboard-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aad44faeb7dfccb1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "sg-0b2160a8ba111bf24",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dashboard_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:security-group/sg-0b36a2cc33e152e5d",
            "description": "Security group for Dashboard public ALB",
            "egress": [],
            "id": "sg-0b36a2cc33e152e5d",
            "ingress": [],
            "name": "dashboard-alb-sg",
            "name_prefix": "",
            "owner_id": "672718425217",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dashboard-alb-sg"
            },
            "tags_all": {
              "Name": "dashboard-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aad44faeb7dfccb1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "sg-0b36a2cc33e152e5d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "counting_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:subnet/subnet-0082300c48f01c16a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0082300c48f01c16a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672718425217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "counting-private-subnet-1"
            },
            "tags_all": {
              "Name": "counting-private-subnet-1"
            },
            "vpc_id": "vpc-0aad44faeb7dfccb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "subnet-0082300c48f01c16a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "counting_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:subnet/subnet-00447f6e50b49fa8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00447f6e50b49fa8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672718425217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "counting-private-subnet-2"
            },
            "tags_all": {
              "Name": "counting-private-subnet-2"
            },
            "vpc_id": "vpc-0aad44faeb7dfccb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "subnet-00447f6e50b49fa8b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dashboard_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:subnet/subnet-0cc9a2f19e7a9269f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc9a2f19e7a9269f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672718425217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dashboard-private-subnet-1"
            },
            "tags_all": {
              "Name": "dashboard-private-subnet-1"
            },
            "vpc_id": "vpc-0aad44faeb7dfccb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "subnet-0cc9a2f19e7a9269f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dashboard_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:subnet/subnet-0c4c33e73d90a2431",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4c33e73d90a2431",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672718425217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dashboard-private-subnet-2"
            },
            "tags_all": {
              "Name": "dashboard-private-subnet-2"
            },
            "vpc_id": "vpc-0aad44faeb7dfccb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "subnet-0c4c33e73d90a2431",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:subnet/subnet-0164c496c35e4154d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0164c496c35e4154d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672718425217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dashboard-public-subnet-1"
            },
            "tags_all": {
              "Name": "dashboard-public-subnet-1"
            },
            "vpc_id": "vpc-0aad44faeb7dfccb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "subnet-0164c496c35e4154d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:subnet/subnet-04ee691334bed43d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ee691334bed43d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672718425217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dashboard-public-subnet-2"
            },
            "tags_all": {
              "Name": "dashboard-public-subnet-2"
            },
            "vpc_id": "vpc-0aad44faeb7dfccb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "subnet-04ee691334bed43d7",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:vpc/vpc-0aad44faeb7dfccb1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00438bd29daf2c1a7",
            "default_route_table_id": "rtb-0b0fbf4ccc92aaaac",
            "default_security_group_id": "sg-0c10e6cfc25a0cd40",
            "dhcp_options_id": "dopt-0196ae68055ce73e6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aad44faeb7dfccb1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b0fbf4ccc92aaaac",
            "owner_id": "672718425217",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dashboard-counting-vpc"
            },
            "tags_all": {
              "Name": "dashboard-counting-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "vpc-0aad44faeb7dfccb1",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "counting_alb_to_counting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:security-group-rule/sgr-0ff2db7d5db2bfb13",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9002,
            "id": "sgr-0ff2db7d5db2bfb13",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0da8783c0aa6ee3fb",
            "region": "ap-northeast-1",
            "security_group_id": "sg-00e92364e3b59c4e1",
            "security_group_rule_id": "sgr-0ff2db7d5db2bfb13",
            "tags": null,
            "tags_all": {},
            "to_port": 9002
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "sgr-0ff2db7d5db2bfb13",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.counting",
            "aws_security_group.counting_alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "dashboard_alb_to_dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:security-group-rule/sgr-0ed21c8619017d6e9",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9001,
            "id": "sgr-0ed21c8619017d6e9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0b2160a8ba111bf24",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0b36a2cc33e152e5d",
            "security_group_rule_id": "sgr-0ed21c8619017d6e9",
            "tags": null,
            "tags_all": {},
            "to_port": 9001
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "sgr-0ed21c8619017d6e9",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.dashboard",
            "aws_security_group.dashboard_alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "dashboard_to_counting_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:security-group-rule/sgr-0467943bcbe8ed0c4",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0467943bcbe8ed0c4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-00e92364e3b59c4e1",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0b2160a8ba111bf24",
            "security_group_rule_id": "sgr-0467943bcbe8ed0c4",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "sgr-0467943bcbe8ed0c4",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.counting_alb",
            "aws_security_group.dashboard",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "counting_alb_from_dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:security-group-rule/sgr-0de8ab9fc1893b1c1",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0de8ab9fc1893b1c1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-00e92364e3b59c4e1",
            "region": "ap-northeast-1",
            "security_group_id": "sg-00e92364e3b59c4e1",
            "security_group_rule_id": "sgr-0de8ab9fc1893b1c1",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "sgr-0de8ab9fc1893b1c1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.counting_alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "counting_from_counting_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:security-group-rule/sgr-06ae51c37f422b4bd",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9002,
            "id": "sgr-06ae51c37f422b4bd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-00e92364e3b59c4e1",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0da8783c0aa6ee3fb",
            "security_group_rule_id": "sgr-06ae51c37f422b4bd",
            "tags": null,
            "tags_all": {},
            "to_port": 9002
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "sgr-06ae51c37f422b4bd",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.counting",
            "aws_security_group.counting_alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dashboard_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:security-group-rule/sgr-084d76e834893278d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-084d76e834893278d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0b36a2cc33e152e5d",
            "security_group_rule_id": "sgr-084d76e834893278d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "sgr-084d76e834893278d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.dashboard_alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dashboard_from_dashboard_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:672718425217:security-group-rule/sgr-0ff0d2fdba35a0ef1",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9001,
            "id": "sgr-0ff0d2fdba35a0ef1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0b36a2cc33e152e5d",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0b2160a8ba111bf24",
            "security_group_rule_id": "sgr-0ff0d2fdba35a0ef1",
            "tags": null,
            "tags_all": {},
            "to_port": 9001
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "672718425217",
            "id": "sgr-0ff0d2fdba35a0ef1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.dashboard",
            "aws_security_group.dashboard_alb",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}